Se reemplazaron las carpetas

--- a/front-end/taller/Paciente.html
+++ b/front-end/taller/Paciente.html
@@ -10,11 +10,11 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
-  <script src="jss/Medico.js"></script>
-    <title>Medico</title>
+  <script src="jss/Paciente.js"></script>
+    <title>Listado paciente</title>
 </head>
 <!--cse requiere que cuando cargue la pagina se ejecute la peticionde listar los clientes-->
-<body onload="listarMedico();">
+<body onload="listarPaciente();">
 
     <div class="container">
         
@@ -22,15 +22,19 @@
 
 <thead>
     <tr>
+      <td style="border: 4px solid white !important;">Id paciente</td>
       <td style="border: 4px solid white !important;">Tipo de documento</td>
-      <td style="border: 4px solid white !important;">Número de Documento:</td>
-      <td style="border: 4px solid white !important;">Primer Nombre:</td>
-      <td style="border: 4px solid white !important;">Segundo Nombre: </td>
-      <td style="border: 4px solid white !important;">Primer Apellido:</td>
-      <td style="border: 4px solid white !important;">Segundo Apellido:</td>
-       <td style="border: 4px solid white !important;">Teléfono:</td>
-      <td style="border: 4px solid white !important;">  Correo Electrónico: </td>
-      <td style="border: 4px solid white !important;">  Estado: </td>
+      <td style="border: 4px solid white !important;">Número de Documento</td>
+      <td style="border: 4px solid white !important;">Primer Nombre</td>
+      <td style="border: 4px solid white !important;">Segundo Nombre</td>
+      <td style="border: 4px solid white !important;">Primer Apellido</td>
+      <td style="border: 4px solid white !important;">Segundo Apellido</td>
+       <td style="border: 4px solid white !important;">Teléfono</td>
+      <td style="border: 4px solid white !important;">Correo Electrónico</td>
+      <td style="border: 4px solid white !important;">Direccion</td>
+      <td style="border: 4px solid white !important;">Nombre Persona Contacto</td>
+      <td style="border: 4px solid white !important;">Telefono Persona Contacto</td>
+      <td style="border: 4px solid white !important;">Estado</td>
      </tr>
     </thead>
 
