--- a/front-end/taller/FormularioPaciente.html
+++ b/front-end/taller/FormularioPaciente.html
@@ -15,15 +15,15 @@
       crossorigin="anonymous"
     ></script>
 
-    <title>Añadir medico</title>
-    <script src="./jss/Medico.js"></script>
+    <title>Añadir Paciente</title>
+    <script src="./jss/Paciente.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </head>
 
   <body>
     <div class="container">
-      <h1 style="margin-top: 100px">Añadir medico</h1>
+      <h1 style="margin-top: 100px">Añadir paciente</h1>
       <div class="row">
         <div class="col col-xl-6 col-12">
           <label for="">Tipo documento</label>
@@ -71,11 +71,19 @@
           <input type="text" id="direccion" class="form-control" />
         </div>
         <div class="col col-xl-6 col-12">
+            <label for="">Nombre Persona Contacto</label>
+            <input type="text" id="nombre_persona_contacto" class="form-control" />
+          </div>
+          <div class="col col-xl-6 col-12">
+            <label for="">Telefono Persona Contacto</label>
+            <input type="text" id="telefono_persona_contacto" class="form-control" />
+          </div>
+        <div class="col col-xl-6 col-12">
           <label for="">Estado</label>
           <input type="text" id="estado" class="form-control" />
         </div>
       </div>
-      <button class="btn btn-success" onclick="registrarMedico();">
+      <button class="btn btn-success" onclick="registrarPaciente();">
         Enviar
       </button>
       <button class="btn btn-secondary">Limpiar</button>
