--- a/front-end/taller/ListadoMedico.html
+++ b/front-end/taller/ListadoMedico.html
@@ -28,13 +28,13 @@
             <td style="border: 4px solid white !important">Segundo Nombre</td>
             <td style="border: 4px solid white !important">Primer Apellido</td>
             <td style="border: 4px solid white !important">
-              Segundo Apellido:
+              Segundo Apellido
             </td>
             <td style="border: 4px solid white !important">
-              Correo Electrónico:
+              Telefono
             </td>
+            <td style="border: 4px solid white !important">Correo</td>
             <td style="border: 4px solid white !important">Dirección</td>
-            <td style="border: 4px solid white !important">Teléfono</td>
             <td style="border: 4px solid white !important">Estado</td>
             <td style="border: 4px solid white !important">Opciones</td>
           </tr>
