--- a/front-end/taller/ListadoPaciente.html
+++ b/front-end/taller/ListadoPaciente.html
@@ -35,6 +35,7 @@
       <td style="border: 4px solid white !important;">Nombre Persona Contacto</td>
       <td style="border: 4px solid white !important;">Telefono Persona Contacto</td>
       <td style="border: 4px solid white !important;">Estado</td>
+      <td style="border: 4px solid white !important">Opciones</td>
      </tr>
     </thead>
 
