--- a/front-end/taller/ListadoIngreso.html
+++ b/front-end/taller/ListadoIngreso.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="css/bootstrap.css" />
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-
-    <script src="jss/Ingreso.js"></script>
+    <script src="jss/ingresoo.js"></script>
     <title>Listado ingreso</title>
   </head>
   <!--cse requiere que cuando cargue la pagina se ejecute la peticionde listar los clientes-->
@@ -19,17 +18,12 @@
           <tr>
             <td style="border: 4px solid white !important">Id ingreso</td>
             <td style="border: 4px solid white !important">
-                Nombre completo medico
+                Id paciente
             </td>
             <td style="border: 4px solid white !important">
-              Nombre completo paciente
+              Id medico
             </td>
-            <div class="col col-xl-6 col-12">
-              <label for="">Habitacion</label>
-              <input type="number" id="numero_documento" 
-              step="1"
-              class="form-control" onfocusout="validarHabitacion(this);">
-          </div>
+            <td style="border: 4px solid white !important">Habitacion</td>
             <td style="border: 4px solid white !important">Cama</td>
             <td style="border: 4px solid white !important">Fecha ingreso</td>
             <td style="border: 4px solid white !important">
@@ -38,6 +32,7 @@
             <td style="border: 4px solid white !important">
               Estado
             </td>
+            <td style="border: 4px solid white !important">Opciones</td>
           </tr>
         </thead>
 
